# MAE-5032-2025S

./: .gitignore  README.md  callgrind.out.3925  gmon.out
week-01/: grep-example.txt
week-02/: backup.sh  shell-script-1.sh
week-02/examples/: regular_express.txt
week-03/: cache-01.cpp  cache-02.cpp  cache-03.cpp  cachebench.c  cachebench.cpp
week-04/: Makefile  blas_demo.cpp  simd_demo  simd_demo.c  simd_demo.cpp
week-04/codes/: Makefile  simd_demo.cpp
week-05/ex-1-invokation/: hello  hello.c  hello.i  hello.s
week-05/ex-2-warning/: out  warning.c
week-05/ex-3-multiple-files/: hello  hello.c  main.c
week-05/ex-3-multiple-files/include/: hello.h
week-06/: demo_opt_2.cpp
week-06/code/: abc.c  demo_fftw.c
week-07/: cache-02-new.cpp  demo_opt_1.cpp
week-07/env-var/: jobscript
week-07/mkl/: main.c  myscript
week-07/opt-flag-taiyi/: jobscript
week-08/make-tutorial/: Makefile-1  Makefile-2  Makefile-3  foo.c
week-08/make-tutorial/ex-01/: Makefile  bar.c  bar.h
week-08/make-tutorial/ex-02/: Makefile  foo.c  help.c  help.h
week-08/make-tutorial/ex-03/: Makefile  bar.d  foo  foo.c  foo.d  hello.h  help.c  help.d
week-08/make-tutorial/ex-04/: Makefile  foo  foo.c
week-09/cmake-tutorial/cmake-01/: CMakeLists.txt
week-09/cmake-tutorial/cmake-02/: CMakeLists.txt
week-09/cmake-tutorial/cmake-03/: CMakeLists.txt  README  main.c  runhello_script
week-09/cmake-tutorial/cmake-03/doc/: hello_project.txt
week-09/cmake-tutorial/cmake-03/src/: CMakeLists.txt
week-09/gdb-tutorial/gdb-02/: black_box.h
week-09/gdb-tutorial/gdb-05/: myfun.h
week-09/gdb-tutorial/signal/: main.c
week-10/gdb-tutorial/gdb-01/: main.cpp
week-10/gdb-tutorial/gdb-02/: basic2.c
week-10/gdb-tutorial/gdb-03/: basic3.c
week-10/gdb-tutorial/gdb-04/: basic4.c
week-10/gdb-tutorial/gdb-05/: basic5.c
week-10/gdb-tutorial/signal/: main.c
week-11/gprof/: callgrind.out.1793  main.c  prifile.txt  prifile_anotated.txt
week-11/lab/: buggy.c  code.c  main.c
week-11/libfuns/: main.c
week-11/time-command/: heavy_compute.c  heavy_sleep.c  heavy_syscall.c  job.sh
week-12/: sign-up.txt
week-13/lab/: nbody-parallel.c  nbody.c
week-16/: Lecture-15-Visualization.pdf.crdownload
week-16/codes/: CMakeLists.txt  demo-hdf5-petsc.c
(+36 files in other folders)
