#CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT (HELLO)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR}) 
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR}) 
#MESSAGE(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR}) 
#MESSAGE(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR}) 
SET(src main.c)
ADD_EXECUTABLE(hello ${src})


