PROJECT(HELLO)
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

ADD_SUBDIRECTORY(src)
INCLUDE_DIRECTORIES(include)
ADD_EXECUTABLE(driver main.c)
TARGET_LINK_LIBRARIES(driver hello)

INSTALL(FILES COPYRIGHT README DESTINATION doc)
INSTALL(PROGRAMS runhello_script DESTINATION bin)
INSTALL(DIRECTORY doc DESTINATION ddocc)
INSTALL(DIRECTORY include/ DESTINATION include)
INSTALL(TARGETS driver DESTINATION bin)
INSTALL(TARGETS hello DESTINATION lib)
